src/test/ui/structs/struct-duplicate-comma.stderr
error: expected identifier, found `,`
  --> $DIR/struct-duplicate-comma.rs:10:14
   |
LL |     let bar = Foo {
   |               --- while parsing this struct
LL |         a: 0,,
   |              ^
   |              |
   |              expected identifier
   |              If I were you, I would simply remove this comma

error: aborting due to previous error

